myapp-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
spec:
  selector:
    app: myapp
  ports:
    - name: flask
      protocol: TCP
      port: 80
      targetPort: 8000
